tests/paczka1/fuzzy1/11905759.err
Error in line 1: dWcsgC A711 79,1
Error in line 3: tuGpNapmGNZ A711 22,3
Error in line 9: MV2Y A711 21,2
Error in line 11: PIy S309 27,1
Error in line 7: tuGpNapmGNZ S141 57,6
Error in line 25: MV2Y S309 4,1
Error in line 33: tuGpNapmGNZ A83 40,5
Error in line 35: MV2Y S141 30,3
Error in line 34: S141 A711 35,3
